# Checkers-practise

./: CMakeLists.txt  README.md  main.cpp
checkers/: CMakeLists.txt  board.cpp  board.h  square.cpp
